<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Uno Procida Residente</string>
    <string-array name="strMezzi">
        <item>Any ship</item>
        <item>Ferries (Traghetti)</item>
        <item>Hydrofoils (Aliscafi)</item>
        <item>Traghetto Caremar</item>
        <item>Aliscafo Caremar</item>
        <item>Aliscafo SNAV</item>
        <item>Gestur</item>
        <item>Medmar</item>
        <item>Ippocampo</item>
        <item>Scotto Line</item>
        <item>Aliscafo Alilauro</item>
        <item>Traghetto LazioMar</item>
    </string-array>
    <string-array name="strPorti">
        <item>Any port</item>
        <item>Procida</item>
        <item>Napoli</item>
        <item>Pozzuoli</item>
        <item>Ischia</item>
        <item>Napoli o Pozzuoli</item>
        <item>Napoli Beverello</item>
        <item>Napoli Porta di Massa</item>
        <item>Napoli Mergellina</item>
        <item>Ischia Porto</item>
        <item>Casamicciola</item>
        <item>Ischia</item>
        <item>Monte di Procida</item>
    </string-array>
    <string-array name="strRagioni">
        <item>Unknown</item>
        <item>Bad Weather Conditions</item>
        <item>Strike</item>
        <item>Damaged Ship</item>
        <item>Festivity</item>
        <item>Changed Timetable</item>
        <item>Delay</item>
    </string-array>
    <string name="mezzo">"Ship:"</string>
    <string name="portoPartenza">"From: "</string>
    <string name="portoArrivo">"To: "</string>
    <string name="minusminus">&lt;&lt;</string>
    <string name="minus">&lt;</string>
    <string name="plus">&gt;</string>
    <string name="plusplus">&gt;&gt;</string>
    <string name="about">Info</string>
    <string name="esci">Quit</string>
    <string name="backTimetable">Back to timetable</string>
    <string name="numeriUtili">Ticket</string>
    <string name="tampone">Not available</string>
    <string name="labelBackground">labelBackground</string>
    <string name="back">Back</string>
    <string name="inserisciFinestra">Size of time window</string>
    <string name="ok">OK</string>
    <string name="ventiquattro">24</string>
    <string name="updateWeb">Update timetable from Web</string>
    <string name="numeriTaxi">Taxi</string>
    <string name="noUpdateWeb">Don\'t update timetable from Web</string>
    <string name="condimeteo">Meteorological conditions:</string>
    <string name="dalle">As of </string>
    <string name="orariAggiornatiAl">Last timetable update: </string>
    <string name="nuovoAggiornamento">Timetables updated to </string>
    <string name="novita">Recent news : </string>
    <string name="aggiornamentoDaWeb">Timetables updated from Web</string>
    <string name="secondoMeVuoiPartireDa">In my opinion, you want to leave from </string>
    <string name="da">from  </string>
    <string name="parteAlle">Leaves at  </string>
    <string name="del"> of  </string>
    <string name="arrivaAlle">Arrives at  </string>
    <string name="costo">"Price:  "</string>
    <string name="a">to</string>
    <string name="circa">(approximately) </string>
    <string name="residenteO">(reduced for islanders) or  </string>
    <string name="intero">(normal)</string>
    <string name="trasportaSoloPasseggeri">No</string>
    <string name="trasportaAutoPasseggeri">Yes</string>
    <string name="calma">Calm</string>
    <string name="bavaDiVento">Light air</string>
    <string name="brezzaLeggera">Light breeze</string>
    <string name="brezzaTesa">Gentle breeze</string>
    <string name="ventoModerato">Moderate breeze</string>
    <string name="ventoTeso">Fresh breeze</string>
    <string name="ventoFresco">Strong breeze</string>
    <string name="ventoForte">Moderate gale</string>
    <string name="burrasca">Gale</string>
    <string name="burrascaForte">Strong gale</string>
    <string name="tempesta">Storm</string>
    <string name="fortunale">Violent storm</string>
    <string name="uragano">Hurricane</string>
    <string name="pocoProbabile">Risks of delay due to bad weather conditions!!!</string>
    <string name="aRischio">Chance of cancellation due to bad weather conditions!!!</string>
    <string name="corsaQuasi">Probably cancelled for bad weather conditions !!!</string>
    <string name="corsaImpossibile">Surely cancelled for bad weather conditions !!!</string>
    <string name="errore">Error</string>
    <string name="nord">North</string>
    <string name="nordOvest">North-West</string>
    <string name="ovest">West</string>
    <string name="sudOvest">South-West</string>
    <string name="sud">South</string>
    <string name="sudEst">Soth-East</string>
    <string name="est">East</string>
    <string name="nordEst">North-East</string>
    <string name="qualsiasi_porto">Any port</string>
    <string name="qualsiasi_imbarcazione">Any ship</string>
    <string name="traghetti">Ferries</string>
    <string name="aliscafi">Hydrofoils</string>
    <string name="traghetto">Ferry</string>
    <string name="aliscafo">Hydrofoil</string>
    <string name="costoResidenteNonNoto">I don\'t know the price of the reduced ticket for islanders</string>
    <string name="costoInteroNonNoto">I don\'t know the price of the full ticket</string>
    <string name="updated">Meteo info refreshed at </string>
    <string name="meteo">Refresh meteo data</string>
    <string name="ore">hour </string>
    <string name="credits">By Porfirio Tramontana 2011,2012. GPL3 license. Credits: Prof.Tramontana for the metheorological algorithm, Maria for the application name, for the icon, for the international publicity and for the usability discussions, Angela for english version support, Gilda for continuous criticism, Google and Open Weather Map for meteo data, the navigation companies for the continuous timetable changes and the procidan voyagers for the broadcasting of timetable changes information.</string>
    <string name="inviaSegnalazione">Do you want to report that this journey will not be made?</string>
    <string name="invioConfermaAvvenuto">Confirmation sent successfully.</string>
    <string name="invioConfermaFallito">Error sending confirmation. Please try again.</string>
    <string name="ragione">Reason:</string>
    <string name="altriDettagliRagione">"Other Details: "</string>
    <string name="invia">Submit</string>
    <string name="ringraziamentoSegnalazione">Thank you for your report!</string>
    <string name="textConferma">Confirm journey\'s regularity</string>
    <string name="Conferma">Confirm</string>
    <string name="segnalazione">warning</string>
    <string name="segnalazioni">warnings</string>
    <string name="diProblemi">for problems</string>
    <string name="possibiliProblemi">Possible problems</string>
    <string name="utenteDice">user says</string>
    <string name="utentiDicono">user say</string>
    <string name="cheLaCorsaERegolare">that the journey will take place</string>
    <string name="inParticolare">in particular:</string>
    <string name="confermaOSmentisci">Report</string>
    <string name="connessioneLenta">The connection is too slow: timetable updates have not been loaded</string>
    <string name="soloOnline">This function is accessible only when the device is connected to the Internet</string>
    <string name="hintDettagli">Insert details here …</string>
    <string name="timeTest">Dalle 88:88 del 88/88</string>
    <string name="NoBiglietterie">Tickets can be bought only on board</string>
    <string name="alleOre">at</string>
    <string name="previsioni">Forecasts:</string>
    <string name="pippo">Goofy</string>
    <string name="disclaimer">Timetables are originally published by navigation companies.\nThe author is not responsible for timetable variations.\n This application collects some personal data of its users, such as their geographical position (not contnuously), saves some data on the internal storage (timetables and meteo infos), send some data to Google Analytics for statistical purposes.\nThe complete GPDR is accessible at: http://unoprocidaresidente.altervista.org/PrivacyPolicyUnoProcidaResidente.htm  This application collects some personal data of its users, such as their geographical position (not contnuously), saves some data on the internal storage (timetables and meteo infos), send some data to Google Analytics for statistical purposes. The complete GPDR is accessible at:</string>
    <string name="error_update_weather">An error occurred</string>
    <string name="error_update_alerts">An error occurred</string>
    <string name="error_update_transports">An error occurred</string>
    <string name="error_update_companies">An error occurred</string>
    <string name="text_view_costo_intero">Full:</string>
    <string name="text_view_costo_ridotto">Residents:</string>
    <string name="text_view_partenza">Departure:</string>
    <string name="text_view_destinazione">Destination:</string>
    <string name="text_view_trasporto_veicoli">Vehicles loading:</string>
    <string name="welcome_text"><b>Welcome</b> on UnoProcidaResidente!</string>
    <string name="nessunaInfoTrasportoVeicoli">Not specified</string>
    <string name="attenzione_lampeggiante">WARNING</string>
</resources>

